# atiling

./: .clang-format  .gitignore  .gitmodules  .srcfilename  COPYING  INSTALL  Makefile  Makefile.am  README.md  atiling.sh.in  autogen.sh  configure.ac  get_submodules.sh  output.c  test.pluto.c  test.pluto.cloog  test.sh  tmp.scop  trahrhe_tiling_header.h
autoconf/: depcomp  install-sh  missing
include/: parser.h
include/atiling/: atiling.h  fragment.h  gen.h  loop.h  loop_info.h  macros.h  macros.h.in  options.h  pragma.h  transform.h  yacc.h  yacc.h.in
src/: Makefile.am  atiling.c  fragment.c  gen.c  loop.c  loop_info.c  main.c  options.c  parser.c  parser.y  pragma.c  scanner.l  transform.c
test/: .gitignore  Makefile.am  bench.h  bench_list.sh  benchmark.sh  ex.c  find_atiling_sizes.sh  find_pluto_tile_sizes.sh  set_pluto_sizes.sh  set_tile_sizes.sh  test  test.c  test.scop  test.scope
test/bench/: 2mm-atiling.c  2mm.c  2mm.h  benchmark.h  polybench.c  polybench.h
test/benchmark/dsyr2k/: dsyr2k.c  dsyr2k_atiling.c
test/benchmark/matmul/: matmul.c  matmul_atiling.c
test/benchmark/ssymm/: ssymm.c  ssymm_atiling.c
test/dsyr2k/: test.c
test/polybench/: Makefile.am
test/polybench/datamining/correlation/: correlation_atiling.c
test/polybench/datamining/covariance/: covariance_atiling.c
test/polybench/linear-algebra/blas/gemm/: gemm_atiling.c
test/polybench/linear-algebra/blas/symm/: symm_atiling.c
test/polybench/linear-algebra/blas/syr2k/: syr2k.c  syr2k_atiling.c
test/polybench/linear-algebra/blas/trmm/: trmm_atiling.c
test/polybench/linear-algebra/kernels/2mm/: 2mm.c  2mm_atiling.c
test/polybench/linear-algebra/kernels/3mm/: 3mm.c  3mm_atiling.c
test/polybench/medley/floyd-warshall/: floyd-warshall.c
test/polybench/utilities/: polybench.h
test/test-pluto/: test.c
test/test-pragma/: 2mm.c  test.c
test/test-transform/: test.c
